# actionformer_release

./: README.md  pyproject.toml  setup.py  train_ddp.py
actionformer/: __init__.py  eval.py  train.py  train_ddp.py
docs/: FRAMEWORK_IMPROVEMENTS.md  USE_CASES.md
libs/core/: __init__.py  config_validator.py  regression_ranges.py
libs/datasets/: datasets.py
libs/modeling/: backbones.py  blocks.py  losses.py  meta_archs.py
libs/utils/: __init__.py  loss_logger.py  temporal_constraints.py  train_utils.py
