[project]
name = "actionformer"
version = "1.3.1"
description = "ActionFormer: Localizing Moments of Actions with Transformers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tensorboard>=2.10.0",
    "tqdm>=4.65.0",
    "pandas>=1.5.0",
    "scipy>=1.10.0",
    "joblib>=1.2.0",
]

[project.scripts]
actionformer-train = "actionformer.train:main"
actionformer-train-ddp = "actionformer.train_ddp:main"
actionformer-eval = "actionformer.eval:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["libs*", "actionformer*"]
